# ToxicBackend

./: .env  .gitignore  README.md  database_init.sql  docker-compose.yml  pyproject.toml
data/clintox/split/: eval.csv  test.csv  train.csv
data/tox21/split/: eval.csv  test.csv  train.csv
resources/: migration.sql
tests/: test_classicalModels.py  test_classicalModely.py  test_predictionPipeline.py  test_preprocessingPipeline.py
toxicbygnn/: main.py
toxicbygnn/database/: __init__.py  operations.py  schema.py
toxicbygnn/model/: BaseModel.py  classicalModels.py
toxicbygnn/models/: __init__.py  classicalModels.py
toxicbygnn/pipelines/: predictionPipeline.py  preprocessingPipeline.py
