[tool.poetry]
name = "toxicbygnn"
version = "0.1.0"
description = ""
authors = ["Cus, Tibor <cus.tibor@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
streamlit = "^1.39.0"
rdkit = "^2024.3.5"
molvs = "^0.1.1"
matplotlib = "^3.9.2"
torch = {version = "^2.4.1+cpu", source = "pytorch_cpu"}
torch-geometric = "^2.6.1"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
